Fixed file field font color for dark mode https://github.com/JabRef/jabref/issues/9340

--- a/src/main/java/org/jabref/gui/Dark.css
+++ b/src/main/java/org/jabref/gui/Dark.css
@@ -1,3 +1,4 @@
+
 .root {
     -jr-theme: #2c9490;
     -jr-accent: #255652;
@@ -169,4 +170,8 @@
 
 .rating > .container > .button.strong {
     -fx-icon-color: -fx-light-text-color;
+}
+
+.file-row-text {
+    -fx-text-fill: -fx-light-text-color;
 }
